--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "start http://localhost:5000 & node server",
     "dev": "start http://localhost:5000 & nodemon server"
   },
-  "author": "Андрей Рубцов",
-  "license": "КРУ",
+  "author": "maklakowiktor",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
